[gd_scene load_steps=11 format=3 uid="uid://c5jcni6ttls2w"]

[ext_resource type="Script" uid="uid://vqd3ytbwbgdn" path="res://scripts/hud.gd" id="1_5ysmq"]
[ext_resource type="FontFile" uid="uid://cfw10xmyoyr4d" path="res://fonts/Xolonium-Regular.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://b2rbek3jdm0iv" path="res://scripts/progress_bar.gd" id="3_8sq4i"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[sub_resource type="CanvasTexture" id="CanvasTexture_64ctp"]

[sub_resource type="CanvasTexture" id="CanvasTexture_8sq4i"]

[sub_resource type="Animation" id="Animation_6fi6k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:tint_under")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.2911872, 0.3394864, 0.36947763, 1), Color(0.94684523, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_5ysmq"]
resource_name = "progress_flash"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:tint_under")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.2911872, 0.3394864, 0.36947763, 1), Color(0.8150196, 3.5857408e-06, 7.70092e-07, 1), Color(0.2901961, 0.34117648, 0.36862746, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uo2fv"]
_data = {
&"RESET": SubResource("Animation_6fi6k"),
&"progress_flash": SubResource("Animation_5ysmq")
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_5ysmq")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1152.0
offset_top = 31.0
offset_right = -1107.0
offset_bottom = 109.0
grow_horizontal = 0
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="ScoreLabel"]
layout_mode = 0
offset_left = -30.0
offset_top = 61.0
offset_right = 116.0
offset_bottom = 84.0
theme_override_constants/outline_size = 6
text = "TIME TO DEADLINE"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "SCOPE CREEP"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8sq4i")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ProgressBar" type="TextureProgressBar" parent="."]
offset_left = 913.0
offset_top = 47.0
offset_right = 1113.0
offset_bottom = 92.0
max_value = 10.0
nine_patch_stretch = true
texture_under = SubResource("CanvasTexture_64ctp")
texture_progress = SubResource("CanvasTexture_8sq4i")
tint_under = Color(0.2911872, 0.3394864, 0.36947763, 1)
tint_progress = Color(0, 1, 0, 1)
script = ExtResource("3_8sq4i")
metadata/_edit_group_ = true

[node name="CompletionLabel" type="Label" parent="ProgressBar"]
layout_mode = 0
offset_left = 16.0
offset_top = 45.0
offset_right = 189.0
offset_bottom = 68.0
theme_override_constants/outline_size = 6
text = "GAME COMPLETION: 0%"

[node name="AlmostDead" type="Label" parent="ProgressBar"]
visible = false
layout_mode = 0
offset_left = 195.0
offset_top = 45.0
offset_right = 403.0
offset_bottom = 68.0
theme_override_colors/font_color = Color(0.91227055, 4.7168137e-06, 6.738305e-07, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 25
text = "SCOPE DANGEROUSLY BIG!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="ProgressBar"]
libraries = {
&"": SubResource("AnimationLibrary_uo2fv")
}

[node name="SizeLabel" type="Label" parent="ProgressBar"]
layout_mode = 0
offset_left = 70.0
offset_top = 64.0
offset_right = 221.0
offset_bottom = 87.0
theme_override_constants/outline_size = 6
text = "GAME SCOPE: 100%"

[node name="PickupHistory" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -929.0
offset_top = -484.0
offset_right = -690.0
offset_bottom = 448.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "DEVLOG"
horizontal_alignment = 1

[node name="ColorRect2" type="ColorRect" parent="PickupHistory"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.5
offset_top = -470.0
offset_right = 120.5
offset_bottom = 324.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.11372549, 0.11372549, 0.11372549, 0.5176471)

[node name="EndMessage" type="RichTextLabel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.0
offset_top = -195.5
offset_right = 340.0
offset_bottom = 195.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/shadow_outline_size = 5
bbcode_enabled = true
text = "DEATH OR VICTORY


GUESS THOSE THINGS DID/DIDN'T HELP"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="EndMessage"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -370.5
offset_top = -218.0
offset_right = 370.5
offset_bottom = 230.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.11372549, 0.11372549, 0.11372549, 0.5176471)

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
